router overflow styles fixed

--- a/src/navigation/Router/styles.less
+++ b/src/navigation/Router/styles.less
@@ -9,7 +9,6 @@
         bottom: 0;
         left: 0;
         z-index: 0;
-        overflow: hidden;
 
         &:not(:last-child) {
             display: none;
@@ -22,6 +21,7 @@
             bottom: 0;
             left: 0;
             z-index: 0;
+            overflow: hidden;
         }
 
         .modals-container {
@@ -35,6 +35,7 @@
                 bottom: 0;
                 left: 0;
                 z-index: 1;
+                overflow: hidden;
             }
         }
     }
